--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
       <ul>
         <li>bricks</li>
         <li>mortar</li>
-        <li>sand</li>
+        <li>lesssand</li>
       </ul>
     </div>
   </body>
