--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <li>bricks</li>
         <li>mortar</li>
         <li>lesssand</li>
-        <li>nov21</li>
+        <li>nov21-added ssh changes</li>
       </ul>
     </div>
   </body>
